// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectBadge Option button should handle option change correctly 1`] = `
<div>
  <div
    class="SelectBadge"
  >
    <button
      aria-activedescendant=""
      aria-controls="downshift-:r9:-menu"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="priority button"
      aria-labelledby="downshift-:r9:-label"
      class="SelectBadge__priorityButton"
      id="downshift-:r9:-toggle-button"
      role="combobox"
      tabindex="0"
      type="button"
    >
      <svg
        class="SelectBadge__icon SelectBadge__icon--mandatory"
        data-testid="default-icon"
        viewBox="0 0 24 24"
      />
    </button>
    <ul
      aria-labelledby="downshift-:r9:-label"
      class="List"
      id="downshift-:r9:-menu"
      role="listbox"
    />
    <button
      aria-activedescendant=""
      aria-controls="downshift-:ra:-menu"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="option button"
      aria-labelledby="downshift-:ra:-label"
      class="SelectBadge__optionButton SelectBadge__optionButton--isSelected"
      id="downshift-:ra:-toggle-button"
      role="combobox"
      tabindex="0"
      type="button"
    >
      <span
        class="Text--size_small SelectBadge__valueText"
        title="Test Child"
      >
        Test Child
      </span>
      <span
        class="Text--size_small SelectBadge__optionText"
        title="Label for 15"
      >
        Label for 15
      </span>
    </button>
    <ul
      aria-labelledby="downshift-:ra:-label"
      class="List Dropdown__list badgeDropdownList"
      data-popper-escaped="true"
      data-popper-placement="bottom"
      data-popper-reference-hidden="true"
      id="downshift-:ra:-menu"
      role="listbox"
      style="position: absolute; left: 0px; top: 0px; width: 0px; transform: translate(0px, 3px);"
    >
      <li
        aria-disabled="false"
        aria-selected="false"
        class="ListItem ListItem--clickable List__item badgeListItem"
        id="downshift-:ra:-item-0"
        role="option"
      >
        <span
          class="Text--size_small"
        >
          Label for 5
        </span>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="ListItem ListItem--clickable List__item badgeListItem"
        id="downshift-:ra:-item-1"
        role="option"
      >
        <span
          class="Text--size_small"
        >
          Label for 15
        </span>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="ListItem ListItem--clickable List__item badgeListItem"
        id="downshift-:ra:-item-2"
        role="option"
      >
        <span
          class="Text--size_small"
        >
          Label for 25
        </span>
      </li>
    </ul>
    <button
      aria-label="delete button"
      class="SelectBadge__deleteButton"
      type="button"
    >
      <svg
        data-testid="default-icon"
        style="width: 20px; height: 20px;"
        viewBox="0 0 24 24"
      />
    </button>
  </div>
</div>
`;

exports[`SelectBadge Priority button renders correctly with all props provided 1`] = `
<div>
  <div
    class="SelectBadge"
  >
    <button
      aria-activedescendant=""
      aria-controls="downshift-:r0:-menu"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="priority button"
      aria-labelledby="downshift-:r0:-label"
      class="SelectBadge__priorityButton"
      id="downshift-:r0:-toggle-button"
      role="combobox"
      tabindex="0"
      type="button"
    >
      <svg
        class="SelectBadge__icon SelectBadge__icon--mandatory"
        data-testid="default-icon"
        viewBox="0 0 24 24"
      />
    </button>
    <ul
      aria-labelledby="downshift-:r0:-label"
      class="List"
      id="downshift-:r0:-menu"
      role="listbox"
    />
    <button
      aria-activedescendant=""
      aria-controls="downshift-:r1:-menu"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="option button"
      aria-labelledby="downshift-:r1:-label"
      class="SelectBadge__optionButton"
      id="downshift-:r1:-toggle-button"
      role="combobox"
      tabindex="0"
      type="button"
    >
      <span
        class="Text--size_small SelectBadge__valueText"
        title="Test Child"
      >
        Test Child
      </span>
      <span
        class="Text--size_small SelectBadge__optionText"
        title="Label for 15"
      >
        Label for 15
      </span>
    </button>
    <ul
      aria-labelledby="downshift-:r1:-label"
      class="List"
      id="downshift-:r1:-menu"
      role="listbox"
    />
    <button
      aria-label="delete button"
      class="SelectBadge__deleteButton"
      type="button"
    >
      <svg
        data-testid="default-icon"
        style="width: 20px; height: 20px;"
        viewBox="0 0 24 24"
      />
    </button>
  </div>
</div>
`;

exports[`SelectBadge Priority button should handle priority change correctly 1`] = `
<div>
  <div
    class="SelectBadge"
  >
    <button
      aria-activedescendant=""
      aria-controls="downshift-:r2:-menu"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="priority button"
      aria-labelledby="downshift-:r2:-label"
      class="SelectBadge__priorityButton SelectBadge__priorityButton--isSelected"
      id="downshift-:r2:-toggle-button"
      role="combobox"
      tabindex="0"
      type="button"
    >
      <svg
        class="SelectBadge__icon SelectBadge__icon--mandatory"
        data-testid="default-icon"
        viewBox="0 0 24 24"
      />
    </button>
    <ul
      aria-labelledby="downshift-:r2:-label"
      class="List Dropdown__list badgeDropdownList"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      id="downshift-:r2:-menu"
      role="listbox"
      style="position: absolute; left: 0px; top: 0px; width: 0px; transform: translate(0px, 3px);"
    >
      <li
        aria-disabled="false"
        aria-selected="false"
        class="ListItem ListItem--clickable List__item badgeListItem"
        id="downshift-:r2:-item-0"
        role="option"
      >
        <svg
          class="SelectBadge__icon SelectBadge__icon--mandatory"
          data-testid="default-icon"
          viewBox="0 0 24 24"
        />
        <span
          class="Text--size_small"
        >
          Mandatory
        </span>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="ListItem ListItem--clickable List__item badgeListItem"
        id="downshift-:r2:-item-1"
        role="option"
      >
        <svg
          class="SelectBadge__icon SelectBadge__icon--important"
          data-testid="default-icon"
          viewBox="0 0 24 24"
        />
        <span
          class="Text--size_small"
        >
          Important
        </span>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="ListItem ListItem--clickable List__item badgeListItem"
        id="downshift-:r2:-item-2"
        role="option"
      >
        <svg
          class="SelectBadge__icon SelectBadge__icon--optional"
          data-testid="default-icon"
          viewBox="0 0 24 24"
        />
        <span
          class="Text--size_small"
        >
          Optional
        </span>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="ListItem ListItem--clickable List__item badgeListItem"
        id="downshift-:r2:-item-3"
        role="option"
      >
        <svg
          class="SelectBadge__icon SelectBadge__icon--exclude"
          data-testid="default-icon"
          viewBox="0 0 24 24"
        />
        <span
          class="Text--size_small"
        >
          Exclude
        </span>
      </li>
    </ul>
    <button
      aria-activedescendant=""
      aria-controls="downshift-:r3:-menu"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="option button"
      aria-labelledby="downshift-:r3:-label"
      class="SelectBadge__optionButton"
      id="downshift-:r3:-toggle-button"
      role="combobox"
      tabindex="0"
      type="button"
    >
      <span
        class="Text--size_small SelectBadge__valueText"
        title="Test Child"
      >
        Test Child
      </span>
      <span
        class="Text--size_small SelectBadge__optionText"
        title="Label for 15"
      >
        Label for 15
      </span>
    </button>
    <ul
      aria-labelledby="downshift-:r3:-label"
      class="List"
      id="downshift-:r3:-menu"
      role="listbox"
    />
    <button
      aria-label="delete button"
      class="SelectBadge__deleteButton"
      type="button"
    >
      <svg
        data-testid="default-icon"
        style="width: 20px; height: 20px;"
        viewBox="0 0 24 24"
      />
    </button>
  </div>
</div>
`;
